# Semantic-Versioning-Test

./: pyproject.toml
.github/workflows/: canary.yml
src/test_package/: version.py
