[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test_package"
version = "0.0.1"
description = "Semantic versioning test package"
authors = ["Aayush Karki"]

[[tool.poetry.packages]]
include = "test_package"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
